<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trial"
    tools:context=".ScannedActivity">

    <TextView
        android:id="@+id/layout_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/event_details"
        android:textColor="#FFF"
        android:textSize="30sp" />


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:alpha="0.7"
        android:background="@drawable/background_greadient"
        android:orientation="vertical">

        <TextView
            android:id="@+id/after_scanning_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/dekko"
            android:text="@string/player_name_"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/after_scanning_player_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/dekko"
            android:text="@string/player_email"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/after_scanning_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/dekko"
            android:text="@string/event_nm"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/after_scanning_event_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/dekko"
            android:text="@string/event_amount"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_navigation"
        android:fontFamily="@font/dekko"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>