<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trial"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/layout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <LinearLayout
            android:id="@+id/main_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:background="@drawable/background_greadient"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="email"
                android:backgroundTint="#035AA6"
                android:drawableEnd="@drawable/ic_black_email"
                android:fontFamily="@font/dekko"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textColorHint="#5F5555" />


            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="false"
                android:backgroundTint="#035AA6"
                android:drawableEnd="@drawable/ic_black_password"
                android:drawablePadding="10dp"
                android:fontFamily="@font/dekko"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textColorHint="#5F5555" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/dekko"
                android:text="@string/forgot_password"
                android:textColor="#000"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_log_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rec_background_greadient"
                android:text="@string/login"
                android:textColor="#FFF"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>


    <TextView
        android:id="@+id/log_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/dekko"
        android:gravity="center_horizontal"
        android:text="@string/new_user_register"
        android:textColor="#FFF"
        android:textSize="18sp" />

</RelativeLayout>
