<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trial"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_event_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/reset_password"
        android:textColor="#FFF"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:alpha="0.7"
        android:background="@drawable/background_greadient"
        android:orientation="vertical">

        <EditText
            android:id="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="true"
            android:backgroundTint="#000"
            android:fontFamily="@font/dekko"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="#000" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/rec_background_greadient"
            android:fontFamily="@font/dekko"
            android:text="@string/send_password_reset_email"
            android:textColor="#FFF" />

    </LinearLayout>

</RelativeLayout>