<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_register_acitivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trial"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_event_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/update_payment_"
            android:textColor="#FFF"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:alpha="0.7"
            android:background="@drawable/background_greadient"
            android:orientation="vertical">


            <EditText
                android:id="@+id/update_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="false"
                android:backgroundTint="#035AA6"
                android:fontFamily="@font/dekko"
                android:hint="@string/event"
                android:inputType="number"
                android:textColor="#000"
                android:textColorHint="#847575" />

            <EditText
                android:id="@+id/update_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="false"
                android:backgroundTint="#035AA6"
                android:fontFamily="@font/dekko"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textColorHint="#847575" />

            <EditText
                android:id="@+id/update_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="false"
                android:backgroundTint="#035AA6"
                android:fontFamily="@font/dekko"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textColorHint="#847575" />

            <EditText
                android:id="@+id/update_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="false"
                android:backgroundTint="#035AA6"
                android:fontFamily="@font/dekko"
                android:hint="@string/contact_no"
                android:inputType="number"
                android:textColor="#000"
                android:textColorHint="#847575" />

            <LinearLayout
                android:id="@+id/linear_layout_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp">

                <EditText
                    android:id="@+id/update_old_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="false"
                    android:backgroundTint="#035AA6"
                    android:fontFamily="@font/dekko"
                    android:hint="Earlier amount"
                    android:inputType="number"
                    android:textColor="#000"
                    android:textColorHint="#847575"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/update_new_amount"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="false"
                    android:backgroundTint="#035AA6"
                    android:fontFamily="@font/dekko"
                    android:hint="Remaining amount"
                    android:inputType="number"
                    android:textColor="#000"
                    android:textColorHint="#847575"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rec_background_greadient"
                android:fontFamily="@font/dekko"
                android:text="@string/update_payment"
                android:textColor="#FFF"
                android:textStyle="bold" />


        </LinearLayout>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_navigation"
            android:fontFamily="@font/dekko"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/menu_navigation" />

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


